test/expected/explain_aui-c++11.out
explain auto int x
             ^
14: error: declaration expected ("int" is a keyword)
